--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "i18n-ally.localesPaths": ["public/locales", "lib/i18n", "lib/i18n/locales"]
+  "i18n-ally.localesPaths": ["lib/i18n/locales"]
 }
