actions: prefix named action{name}

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
+# Required
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 SESSION_SECRET=abc123
+
+# Optional
+CONTACT_FORM_URL= # i.e. https://formspree.io/f/xknyyjny
