--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "lucide-react": "^0.395.0",
     "marked": "^13.0.1",
     "moment": "^2.30.1",
-    "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^15.0.0-canary.73",
+    "react": "19.0.0-rc-512b09b2-20240718",
+    "react-dom": "19.0.0-rc-512b09b2-20240718",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.1.2",
     "tailwind-merge": "^2.3.0",
