fix cache using redis

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "seed": "tsx src/db/seed.ts"
   },
   "dependencies": {
-    "@epic-web/cachified": "^4.0.0",
+    "@epic-web/cachified": "^5.2.0",
     "@headlessui/react": "^1.7.17",
     "@headlessui/tailwindcss": "^0.2.1",
     "@paralleldrive/cuid2": "^2.2.2",
@@ -52,6 +52,7 @@
     "@supabase/supabase-js": "^2.45.4",
     "accept-language": "^3.0.18",
     "bcryptjs": "^2.4.3",
+    "cachified-redis-adapter": "^2.0.2",
     "cachified-redis-json-adapter": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -63,10 +64,8 @@
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
-    "ioredis": "^5.4.1",
     "is-ip": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
-    "lru-cache": "^11.0.1",
     "lucide-react": "^0.395.0",
     "marked": "^13.0.1",
     "moment": "^2.30.1",
@@ -80,6 +79,7 @@
     "react-dom": "19.0.0-rc-512b09b2-20240718",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.1.2",
+    "redis": "^4.7.0",
     "resend": "^4.0.0",
     "sonner": "^1.5.0",
     "stripe": "^10.8.0",
@@ -97,6 +97,7 @@
     "@types/postmark": "^2.0.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/redis": "^4.0.11",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
