--- a/package.json
+++ b/package.json
@@ -82,8 +82,10 @@
     "redis": "^4.7.0",
     "resend": "^4.0.0",
     "sonner": "^1.5.0",
+    "spin-delay": "^2.0.1",
     "stripe": "^10.8.0",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -98,6 +100,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/redis": "^4.0.11",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
