--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@types/cookie": "^0.6.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
+    "@types/numeral": "^2.0.5",
     "@types/pg": "^8.11.10",
     "@types/postmark": "^2.0.3",
     "@types/react": "^18",
