sample env example keys

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,26 @@
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 SESSION_SECRET=abc123
 
-# Optional
+# DB (prisma or drizzle)
+DATABASE_URL="postgres://{USER}:{PASSWORD}@{HOST}:{PORT}/{DATABASE}"
+
+# PRICING
+STRIPE_SK=
+STRIPE_WEBHOOK_SIGNING_SECRET=
+
+# EMAILS
+POSTMARK_SERVER_TOKEN=
+RESEND_API_KEY= 
+
+# CONTACT FORM
 CONTACT_FORM_URL= # i.e. https://formspree.io/f/abc123
+
+# NEWSLETTER FORM
+CONVERTKIT_APIKEY=
+CONVERTKIT_FORM=
+
+# CHAT BUBBLE
+CRISP_CHAT_WEBSITE_ID=
+
+# CACHE
 REDIS_URL= # i.e. rediss://default:
