--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,6 @@
     "@typescript-eslint/ban-ts-comment": "off",
     "no-var": "off",
     "@typescript-eslint/no-unused-vars": "warn"
-  }
+  },
+  "plugins": ["@typescript-eslint"]
 }
