--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "@types/react-dom": "^18",
     "@types/redis": "^4.0.11",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
     "drizzle-kit": "^0.24.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
