--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
     "prefer-const": "off",
     "@typescript-eslint/ban-ts-comment": "off",
     "no-var": "off",
-    "@typescript-eslint/no-unused-vars": "warn"
+    "@typescript-eslint/no-unused-vars": "off"
   },
   "plugins": ["@typescript-eslint"]
 }
