--- a/package.json
+++ b/package.json
@@ -77,9 +77,9 @@
     "pg": "^8.13.0",
     "postgres": "^3.4.4",
     "postmark": "^4.0.5",
-    "react": "19.0.0-rc-512b09b2-20240718",
+    "react": "^19.0.0-rc-f994737d14-20240522",
     "react-day-picker": "^8.10.0",
-    "react-dom": "19.0.0-rc-512b09b2-20240718",
+    "react-dom": "^19.0.0-rc-f994737d14-20240522",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.1.2",
     "redis": "^4.7.0",
